@@ -1,3 +1,5 @@
+* OTH#0000 Fix batch parameters handling inherited from 1.12
+
 Version 1.14 - 2017-11-09
 * OTH#0000 Now, the batch parameter 'possible_days' stop the batch execution if empty or not given
 * FEA#6898 Enhance batch which print automatically insurer reporting
